@@ -1,5 +1,5 @@
 DIST zer.zip 11467125 RMD160 5a9e2a8f5d6b7d37b3e12bfa9add26c876b97958 SHA1 15f8a0834cc8dd6e8ac4ec8017faa5258acf0d70 SHA256 e1f7b48e210e56c793105497439c88dc2ada1bd2bbb8be5947ec2f99f0965797
 DIST zer11.zip 274130 RMD160 cf70483dde2db020eb15eec40ab4bd514cbdc3b4 SHA1 6224bd3a9b4a004a28dfb4946f7b531a2f2306d9 SHA256 46545a2e684a8ac839fd5059a5fcfdf8d0c0ce79da2eda50fd201a690329aaa4
 DIST zervis.zip 571302 RMD160 0e977da00c9b1a863badeb61acdade362a863d24 SHA1 9a4052e7caf241c4274a44a043031c26a085b223 SHA256 45c430fcbfee47a2edf9fd97d59cfe1fc8b48e7b08ef1f9a0717e8f84027c132
-EBUILD quake1-zerstorer-1.1-r1.ebuild 1699 RMD160 1a66e6d905fcb7d7dbef0c88e89a7cd961185a80 SHA1 884220575c3f10454329bdbd811eb8139d2a1165 SHA256 19a385d2eb18bfd44f0b579e375a9f9fb87f22ecfe166633c268c7b0ceb3a5f2
-MISC ChangeLog 251 RMD160 fd7dcd64d6817ff45073a650c50b29ae08ee2a4b SHA1 a1c73f60d3114d5a342be42e55a98514f834ab9c SHA256 c6454720e610048ce8b2b514741b9ada4316d3c5cc25343f57bb6a2414cb4282
+EBUILD quake1-zerstorer-1.1-r1.ebuild 1320 RMD160 6fa543b015b3b3c26b0e319b3646c3f2b44cfa58 SHA1 1f4f4829e91cb0cfdb6de5a48544b7728f7701d9 SHA256 a9923da0db013407e044b38226a51d94c3fa9ee653412f9611fb8acb6f972d12
+MISC ChangeLog 378 RMD160 b3c0c10c094e9fbcbd24690fc61d6d4bb66813fa SHA1 dff4c9368acf626ba4388608eb2ffa6c2761209a SHA256 15c69d10ca32cb9cca58ab35d7df5e1121ba2d71b109fda70ca6e3ce41eaa424
