@@ -18,8 +18,6 @@ SRC_G="http://www.gamers.org/pub/idgames2/partial_conversions/zerstoerer"
 DESCRIPTION="Story-driven Quake 1 campaign with new weapons and monsters"
 HOMEPAGE="http://shotgun1.shackspace.com/"
 
-IUSE="vispatch"
-
 SRC_URI="${SRC_PM}/${MOD_DIR}.zip
 	${SRC_B}/${MOD_DIR}.zip
 	${SRC_ADDICT}/${MOD_DIR}.zip
@@ -28,26 +26,14 @@ SRC_URI="${SRC_PM}/${MOD_DIR}.zip
 	${SRC_B}/${MOD_DIR}${MY_PV}.zip
 	${SRC_ADDICT}/${MOD_DIR}${MY_PV}.zip
 	${SRC_G}/${MOD_DIR}${MY_PV}.zip
-	vispatch? ( zervis.zip )"
+	vispatch? ( http://mlodyinteligent.pl/~lazy_bum/quake-vis/zervis.zip )"
 
-RESTRICT="fetch"
+IUSE="vispatch"
 
 DEPEND="vispatch? (
 		games-util/vispatch
 		app-arch/zip
 		)"
-
-pkg_nofetch() {
-	# Don't know if this is correct, but it works.
-	use vispatch
-		einfo "Download zer.zip manually from 3D Downloads website at"
-		einfo "http://www.3ddownloads.com/telefragged/inside3d/qip/"
-		einfo "Choose watervis/patches/zer.zip"
-		einfo ""
-		einfo "Then rename the file to zervis.zip (we already have one"
-		einfo "zer.zip), place it into ${DISTDIR}"
-		einfo "and restart the emerge."
-}
 
 src_unpack() {
 	unpack ${A}
